# edgedb_connections

./: connect.py  pyproject.toml  readme.md  test.py
