[tool.poetry]
name = "edgedb_connect"
version = "0.1.0"
description = ""
authors = ["Tyler Matteson <tyler@agritheory.com>"]

[tool.poetry.dependencies]
python = "^3.8"
edgedb = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-asyncio = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
